--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@prisma/cli": "2.13.1",
     "@types/bcrypt": "^3.0.0",
+    "@types/graphql-resolvers": "^0.3.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.14",
