--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
     "aws-sdk": "^2.817.0",
     "bcrypt": "^5.0.0",
     "date-fns": "^2.16.1",
+    "dotenv": "^8.2.0",
     "graphql": "^15.4.0",
     "graphql-resolvers": "^0.4.2",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "node-fetch": "^2.6.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@prisma/cli": "2.13.1",
     "@types/bcrypt": "^3.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/graphql-resolvers": "^0.3.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.165",
@@ -27,6 +30,7 @@
     "dev": "nodemon",
     "prisma:migrate": "prisma migrate dev --preview-feature",
     "prisma:introspect": "prisma introspect",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "seed:tournaments": "ts-node src/tournamentSynchronizer.ts"
   }
 }
