--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
     "uuid": "^8.3.2"
   },
@@ -23,6 +24,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.14",
+    "@types/node-cron": "^2.0.3",
     "@types/uuid": "^8.3.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
