--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "@prisma/client": "^2.14.0",
     "apollo-server": "^2.19.0",
+    "apollo-server-express": "^3.0.2",
     "aws-sdk": "^2.817.0",
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
