--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@graphql-tools/schema": "^7.1.5",
     "@prisma/client": "^2.14.0",
     "apollo-server": "^2.19.0",
     "apollo-server-express": "^3.0.2",
@@ -10,12 +11,14 @@
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "graphql": "^15.4.0",
+    "graphql-redis-subscriptions": "^2.4.0",
     "graphql-resolvers": "^0.4.2",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
+    "subscriptions-transport-ws": "^0.9.19",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
