--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "@graphql-tools/schema": "^7.1.5",
     "@prisma/client": "^2.14.0",
+    "@types/ioredis": "^4.26.6",
     "apollo-server": "^2.19.0",
     "apollo-server-express": "^3.0.2",
+    "apollo-server-integration-testing": "^3.0.0",
     "aws-sdk": "^2.817.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -32,6 +34,7 @@
     "@types/node": "^14.14.14",
     "@types/node-cron": "^2.0.3",
     "@types/uuid": "^8.3.0",
+    "jest": "^27.0.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
@@ -42,6 +45,7 @@
     "studio": "prisma studio",
     "seed:tournaments": "ts-node src/seeds/tournamentSynchronizer.ts",
     "seed:characters": "ts-node src/seeds/characters.ts",
-    "seed:roles": "ts-node src/seeds/roles.ts"
+    "seed:roles": "ts-node src/seeds/roles.ts",
+    "seed": "yarn seed:tournaments && yarn seed:characters && yarn seed:roles"
   }
 }
