--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "date-fns": "^2.16.1",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "graphql": "^15.4.0",
     "graphql-redis-subscriptions": "^2.4.0",
     "graphql-resolvers": "^0.4.2",
+    "graphql-upload": "^12.0.0",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
@@ -29,14 +30,17 @@
     "@types/bcrypt": "^3.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/graphql-resolvers": "^0.3.0",
+    "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.14",
     "@types/node-cron": "^2.0.3",
     "@types/uuid": "^8.3.0",
+    "dotenv-cli": "^4.0.0",
     "jest": "^27.0.6",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "graphql-cli": "4.1.0"
   },
   "scripts": {
     "dev": "nodemon",
