--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "@prisma/client": "^2.14.0",
     "@types/ioredis": "^4.26.6",
     "apollo-server": "^2.19.0",
-    "apollo-server-express": "^3.0.2",
+    "apollo-server-express": "2.9.13",
     "apollo-server-integration-testing": "^3.0.0",
     "aws-sdk": "^2.817.0",
+    "babel-jest": "^27.0.6",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
@@ -22,11 +23,11 @@
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
     "subscriptions-transport-ws": "^0.9.19",
+    "ts-jest": "^27.0.4",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/graphql-resolvers": "^0.3.0",
@@ -37,10 +38,11 @@
     "@types/node-cron": "^2.0.3",
     "@types/uuid": "^8.3.0",
     "dotenv-cli": "^4.0.0",
+    "graphql-cli": "4.1.0",
     "jest": "^27.0.6",
+    "prisma": "^2.28.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
-    "graphql-cli": "4.1.0"
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "dev": "nodemon",
@@ -50,6 +52,9 @@
     "seed:tournaments": "ts-node src/seeds/tournamentSynchronizer.ts",
     "seed:characters": "ts-node src/seeds/characters.ts",
     "seed:roles": "ts-node src/seeds/roles.ts",
-    "seed": "yarn seed:tournaments && yarn seed:characters && yarn seed:roles"
+    "seed": "yarn seed:tournaments && yarn seed:characters && yarn seed:roles",
+    "test:migrate": "dotenv -e .env.test -- npx prisma migrate dev --preview-feature",
+    "test:seed": "dotenv -e .env.test yarn seed:characters && dotenv -e .env.test yarn seed:roles",
+    "test": "dotenv -e .env.test jest -i"
   }
 }
