--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "@graphql-tools/schema": "^7.1.5",
-    "@prisma/client": "^2.14.0",
+    "@prisma/client": "^2.28.0",
     "@types/ioredis": "^4.26.6",
     "apollo-server": "^2.19.0",
     "apollo-server-express": "^3.0.2",
@@ -15,9 +15,12 @@
     "graphql": "^15.4.0",
     "graphql-redis-subscriptions": "^2.4.0",
     "graphql-resolvers": "^0.4.2",
+    "graphql-type-json": "^0.3.2",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "nexus": "^1.1.0",
+    "nexus-prisma": "^0.30.0",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
     "subscriptions-transport-ws": "^0.9.19",
@@ -35,11 +38,12 @@
     "@types/node-cron": "^2.0.3",
     "@types/uuid": "^8.3.0",
     "jest": "^27.0.6",
-    "ts-node": "^9.1.1",
+    "prisma": "^2.28.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "dev": "nodemon",
+    "dev": "ts-node-dev --no-notify --respawn --transpile-only src/index.ts",
     "migrate": "prisma migrate dev --preview-feature",
     "introspect": "prisma introspect",
     "studio": "prisma studio",
