--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
     "strict": false,
     "lib": ["esnext"],
     "esModuleInterop": true,
-    "typeRoots": ["./src/generated"]
+    "types": ["node", "jest"]
   }
 }
