--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "@graphql-tools/schema": "^7.1.5",
-    "@prisma/client": "^2.28.0",
+    "@prisma/client": "^3.3.0",
     "@types/ioredis": "^4.26.6",
     "apollo-server": "^2.19.0",
     "apollo-server-express": "2.9.13",
@@ -13,7 +13,7 @@
     "chalk": "^4.1.0",
     "date-fns": "^2.16.1",
     "dotenv": "^10.0.0",
-    "graphql": "^15.4.0",
+    "graphql": "^15.7.0",
     "graphql-redis-subscriptions": "^2.4.0",
     "graphql-resolvers": "^0.4.2",
     "graphql-type-json": "^0.3.2",
@@ -22,7 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "nexus": "^1.1.0",
-    "nexus-prisma": "^0.30.0",
+    "nexus-prisma": "^0.34.0",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
     "subscriptions-transport-ws": "^0.9.19",
@@ -43,7 +43,7 @@
     "dotenv-cli": "^4.0.0",
     "graphql-cli": "4.1.0",
     "jest": "^27.0.6",
-    "prisma": "^2.28.0",
+    "prisma": "^3.3.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.1.3"
   },
@@ -52,10 +52,7 @@
     "migrate": "prisma migrate dev --preview-feature",
     "introspect": "prisma introspect",
     "studio": "prisma studio",
-    "seed:tournaments": "ts-node src/seeds/tournamentSynchronizer.ts",
-    "seed:characters": "ts-node src/seeds/characters.ts",
-    "seed:roles": "ts-node src/seeds/roles.ts",
-    "seed": "yarn seed:tournaments && yarn seed:characters && yarn seed:roles",
+    "seed": "ts-node src/seeds",
     "test:migrate": "dotenv -e .env.test -- npx prisma migrate dev --preview-feature",
     "test:seed": "dotenv -e .env.test yarn seed:characters && dotenv -e .env.test yarn seed:roles",
     "test": "dotenv -e .env.test jest -i"
