--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "graphql": "^15.7.0",
     "graphql-redis-subscriptions": "^2.4.0",
+    "graphql-request": "^3.6.1",
     "graphql-resolvers": "^0.4.2",
     "graphql-type-json": "^0.3.2",
     "graphql-upload": "^12.0.0",
@@ -43,8 +44,8 @@
     "dotenv-cli": "^4.0.0",
     "graphql-cli": "4.1.0",
     "jest": "^27.0.6",
-    "ts-node": "^10.4.0",
     "prisma": "^3.3.0",
+    "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.1.3"
   },
