--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
+    "@google-cloud/storage": "^5.15.5",
     "@graphql-tools/schema": "^7.1.5",
     "@prisma/client": "^3.3.0",
     "@types/ioredis": "^4.26.6",
     "apollo-server": "^2.19.0",
     "apollo-server-express": "2.9.13",
     "apollo-server-integration-testing": "^3.0.0",
-    "aws-sdk": "^2.817.0",
     "babel-jest": "^27.0.6",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
