--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nexus-prisma": "^0.34.0",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
+    "sharp": "^0.29.3",
     "subscriptions-transport-ws": "^0.9.19",
     "ts-jest": "^27.0.4",
     "uuid": "^8.3.2",
@@ -41,6 +42,7 @@
     "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.14",
     "@types/node-cron": "^2.0.3",
+    "@types/sharp": "^0.29.4",
     "@types/uuid": "^8.3.0",
     "dotenv-cli": "^4.0.0",
     "graphql-cli": "4.1.0",
