--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.2.0",
     "@types/bcrypt": "^3.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/graphql-resolvers": "^0.3.0",
