--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
     "@google-cloud/storage": "^5.15.5",
-    "@graphql-tools/schema": "^7.1.5",
-    "@prisma/client": "^3.11.0",
+    "@graphql-tools/schema": "^8.3.10",
+    "@prisma/client": "^3.11.3",
     "@types/fs-extra": "^9.0.13",
     "@types/ioredis": "^4.26.6",
     "@types/nodemailer": "^6.4.4",
     "apollo-server": "^2.19.0",
+    "apollo-server-core": "^3.6.7",
     "apollo-server-express": "2.9.13",
     "apollo-server-integration-testing": "^3.0.0",
     "babel-jest": "^27.0.6",
@@ -24,6 +25,7 @@
     "graphql-resolvers": "^0.4.2",
     "graphql-type-json": "^0.3.2",
     "graphql-upload": "^12.0.0",
+    "graphql-ws": "^5.8.1",
     "handlebars": "^4.7.7",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
@@ -37,7 +39,8 @@
     "subscriptions-transport-ws": "^0.9.19",
     "ts-jest": "^27.0.4",
     "uuid": "^8.3.2",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "ws": "^8.6.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.2.0",
@@ -53,8 +56,11 @@
     "@types/uuid": "^8.3.0",
     "dotenv-cli": "^4.0.0",
     "graphql-cli": "4.1.0",
+    "husky": ">=6",
     "jest": "^27.0.6",
-    "prisma": "^3.11.0",
+    "lint-staged": ">=10",
+    "prettier": "2.6.2",
+    "prisma": "^3.11.3",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.1.3"
@@ -68,6 +74,10 @@
     "test:migrate": "dotenv -e .env.test -- npx prisma migrate dev --preview-feature",
     "test:seed": "dotenv -e .env.test yarn seed:characters && dotenv -e .env.test yarn seed:roles",
     "test": "dotenv -e .env.test jest -i",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "**/*.{ts,handlebars,prisma,graphql}": "prettier --write"
   }
 }
