--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@devoxa/prisma-relay-cursor-connection": "^2.2.1",
     "@google-cloud/storage": "^5.15.5",
     "@graphql-tools/schema": "^8.3.10",
     "@prisma/client": "^3.11.3",
