--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^10.0.0",
     "fs-extra": "^10.1.0",
     "graphql": "^15.7.0",
+    "graphql-iso-date": "^3.6.1",
     "graphql-redis-subscriptions": "^2.4.0",
     "graphql-request": "^3.6.1",
     "graphql-resolvers": "^0.4.2",
@@ -47,6 +48,7 @@
     "@faker-js/faker": "^6.2.0",
     "@types/bcrypt": "^3.0.0",
     "@types/dotenv": "^8.2.0",
+    "@types/graphql-iso-date": "^3.4.0",
     "@types/graphql-resolvers": "^0.3.0",
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.0",
