--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mongoose": "^6.3.4",
     "nexus": "^1.1.0",
     "nexus-prisma": "^0.34.0",
     "node-cron": "^2.0.3",
