--- a/package.json
+++ b/package.json
@@ -1,72 +1,74 @@
 {
   "dependencies": {
     "@devoxa/prisma-relay-cursor-connection": "^2.2.1",
-    "@google-cloud/storage": "^5.15.5",
-    "@graphql-tools/schema": "^8.3.10",
-    "@prisma/client": "^3.11.3",
+    "@google-cloud/storage": "^6.0.1",
+    "@graphql-tools/schema": "^8.3.13",
+    "@prisma/client": "^3.14.0",
     "@types/fs-extra": "^9.0.13",
     "@types/ioredis": "^4.26.6",
     "@types/nodemailer": "^6.4.4",
-    "apollo-server": "^2.19.0",
-    "apollo-server-core": "^3.6.7",
-    "apollo-server-express": "2.9.13",
+    "apollo-server": "^3.8.1",
+    "apollo-server-cache-redis": "^3.3.1",
+    "apollo-server-core": "^3.8.1",
+    "apollo-server-express": "3.8.1",
     "apollo-server-integration-testing": "^3.0.0",
-    "babel-jest": "^27.0.6",
+    "apollo-server-plugin-response-cache": "^3.6.0",
+    "babel-jest": "^28.1.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "chalk": "^4.1.0",
     "date-fns": "^2.16.1",
-    "dotenv": "^10.0.0",
-    "express-handlebars": "^6.0.5",
+    "dotenv": "^16.0.1",
+    "express-handlebars": "^6.0.6",
     "firebase-admin": "^10.0.0",
     "fs-extra": "^10.1.0",
-    "graphql": "^15.7.0",
+    "graphql": "^16.5.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-redis-subscriptions": "^2.4.0",
-    "graphql-request": "^3.6.1",
+    "graphql-request": "^4.3.0",
     "graphql-resolvers": "^0.4.2",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-type-json": "^0.3.2",
-    "graphql-upload": "^12.0.0",
-    "graphql-ws": "^5.8.1",
+    "graphql-upload": "^13.0.0",
+    "graphql-ws": "^5.8.2",
     "handlebars": "^4.7.7",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.3.4",
+    "mongoose": "^6.3.5",
     "nexus": "^1.1.0",
-    "nexus-prisma": "^0.34.0",
-    "node-cron": "^2.0.3",
-    "node-fetch": "^2.6.1",
+    "nexus-prisma": "^0.35.0",
+    "node-cron": "^3.0.0",
+    "node-fetch": "^3.2.5",
     "nodemailer": "^6.7.4",
-    "sharp": "^0.29.3",
-    "subscriptions-transport-ws": "^0.9.19",
-    "ts-jest": "^27.0.4",
+    "sharp": "^0.30.6",
+    "subscriptions-transport-ws": "^0.11.0",
+    "ts-jest": "^28.0.3",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
-    "ws": "^8.6.0"
+    "ws": "^8.7.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^6.2.0",
-    "@types/bcrypt": "^3.0.0",
+    "@faker-js/faker": "^7.1.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/graphql-iso-date": "^3.4.0",
     "@types/graphql-resolvers": "^0.3.0",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^28.1.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.165",
-    "@types/node": "^14.14.14",
-    "@types/node-cron": "^2.0.3",
-    "@types/sharp": "^0.29.4",
+    "@types/node": "^17.0.38",
+    "@types/node-cron": "^3.0.1",
+    "@types/sharp": "^0.30.2",
     "@types/uuid": "^8.3.0",
-    "dotenv-cli": "^4.0.0",
+    "dotenv-cli": "^5.1.0",
     "graphql-cli": "4.1.0",
-    "husky": ">=6",
-    "jest": "^27.0.6",
-    "lint-staged": ">=10",
+    "husky": ">=8.0.1",
+    "jest": "^28.1.0",
+    "lint-staged": ">=13.0.0",
     "prettier": "2.6.2",
-    "prisma": "^3.11.3",
-    "ts-node": "^10.4.0",
-    "ts-node-dev": "^1.1.8",
+    "prisma": "^3.14.0",
+    "ts-node": "^10.8.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.1.3"
   },
   "scripts": {
