--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@prisma/client": "^3.14.0",
     "@types/fs-extra": "^9.0.13",
     "@types/ioredis": "^4.26.6",
+    "@types/mock-req-res": "^1.1.3",
     "@types/nodemailer": "^6.4.4",
     "apollo-server": "^3.8.1",
     "apollo-server-cache-redis": "^3.3.1",
@@ -34,6 +35,7 @@
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mock-req-res": "^1.2.0",
     "mongoose": "^6.3.5",
     "nexus": "^1.1.0",
     "nexus-prisma": "^0.35.0",
@@ -67,18 +69,18 @@
     "lint-staged": ">=13.0.0",
     "prettier": "2.6.2",
     "prisma": "^3.14.0",
+    "sinon": "^14.0.0",
     "ts-node": "^10.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.1.3"
   },
   "scripts": {
     "dev": "ts-node-dev --no-notify --respawn --transpile-only src/index.ts",
-    "migrate": "prisma migrate dev --preview-feature",
+    "migrate": "prisma migrate dev",
     "introspect": "prisma introspect",
     "studio": "prisma studio",
     "seed": "prisma db seed",
-    "test:migrate": "dotenv -e .env.test -- npx prisma migrate dev --preview-feature",
-    "test:seed": "dotenv -e .env.test yarn seed:characters && dotenv -e .env.test yarn seed:roles",
+    "test:migrate": "dotenv -e .env.test prisma migrate dev --skip-seed",
     "test": "dotenv -e .env.test jest -i",
     "postinstall": "prisma generate",
     "prepare": "husky install"
